More fixes and improvements to robustness